.k8s/aks-application.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parking-ppak-deployment
  labels:
    app: parking-ppak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parking-ppak
  template:
    metadata:
      labels:
        app: parking-ppak
    spec:
      containers:
        - name: parking-ppak
          image: parkingacr.azurecr.io/parkingppak:latest
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: parking-ppak
spec:
  type: ClusterIP
  ports:
    - protocol: "TCP"
      port: 8080
      targetPort: 8080
  selector:
    app: parking-ppak
