.k8s/dind.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dind-daemon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dind-daemon
  template:
    metadata:
      labels:
        app: dind-daemon
    spec:
      containers:
        - name: dind-daemon
          image: docker:20.10.14-dind
          resources:
            requests:
              cpu: 20m
              memory: 512Mi
          securityContext:
            privileged: true
          volumeMounts:
            - name: docker-graph-storage
              mountPath: /var/lib/docker

      volumes:
        - name: docker-graph-storage
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: dind-daemon
  labels:
    app: dind-daemon
spec:
  ports:
    - name: tcp
      port: 2375
      targetPort: 2375
  selector:
    app: dind-daemon
